modified:   images/about.png 	modified:   index.html 	.vscode/

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3>Hello, It's Me</h3>
       <h1>Elo Presil Berfa</h1>
       <h3>And I'm a <span class="multiple-text"></span></h3>
-      <p>Hello I'm Elo Presil Berfa, I was born in Trenggalek, 26 April 2007. I like activities related to coding and graphic design.</p>
+      <p>Halo, saya Elo Presil Berfa, saya lahir di Trenggalek, 26 April 2007. Saya suka aktivitas terkait dengan pemrograman dan desain grafis.</p>
       
       <div class="social-media">
         <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -37,7 +37,7 @@
       <a href="#" class="btn">Download CV</a>
       </div>
       <div class="home-img">
-        <img src="images/home.png" alt="">
+        <img src="images/about.png" alt="">
       </div>
   </section>
   
@@ -46,9 +46,9 @@
       <img src="images/about.png" alt="">
 
       <div class="about-content">
-        <h2 class="heading">About <span>Me</span></h2>
-        <h3>Frontend Developer</h3>
-        <p>Hello I'm Elo Presil Berfa, I was born in Trenggalek, 26 April 2007. I like activities related to coding and graphic design.</p>
+        <h2 class="heading">Tentang <span>Saya</span></h2>
+        <h3>Pengembang Frontend</h3>
+        <p>Halo, saya Elo Presil Berfa, saya lahir di Trenggalek, 26 April 2007. Saya suka aktivitas terkait dengan pemrograman dan desain grafis.</p>
         <a href="#" class="btn">Read More</a>
       </div>
   </section>
